all of the process in the sch on 4/6/24

--- a/694-01.html
+++ b/694-01.html
@@ -18,8 +18,8 @@
         </div>
     </section>
     <div style="background-color: #f2f2f2; padding: 20px; text-align: center;font-family: NunitoSans;">
-        <h1 style="color: #ff9900;">Seems the things you're trying to find is not exist!</h1>
-        <p style="font-size: 18px; color: #333;">The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.<br><sub>Error Code: 404</sub></p> 
+        <h1 style="color: #ff9900;">Seems the things that you're trying to add to<br>Cart/Wish list is already in it!</h1>
+        <p style="font-size: 18px; color: #333;"><sub>Error Code: 694-01</sub></p> 
             <button onclick="loading.in('./home.php')" style="background-color: #4CAF50; border: none; color: white; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer;">
                 Back to Home Page
             </button>
