--- a/login.html
+++ b/login.html
@@ -13,12 +13,9 @@
     <form name="login" method="post" action="validate.php">
       <div class="screen-1">
         <img class="logo" src="imgs\Stella_Logo_Small.png" alt="Stella Logo">
-        <div class="userid">
-          <div class="sec-2">
-            <!--<ion-icon name="mail-outline"></ion-icon>-->
+        <div class="userid"><div class="sec-2">
             <input type="text" name="uid" placeholder="MOSSS Student/Teacher ID"/>
-          </div>
-        </div>
+        </div></div>
         <div class="password">
           <div class="sec-2">
             <input class="pas" type="password" name="pw" placeholder="Password"/>
@@ -27,7 +24,7 @@
       <button class="login" value="Submit">Login </button>
     </form>
     <div class="footer">
-      <a href="404.html" style="text-align: left;">Signup</a>
+      <a href="regis.html" style="text-align: left;">Signup</a>
       <a href="404.html" style="text-align: right;">Forgot Password?</a>
     </div>
   </div>
