21-8 progress, started admin panel

--- a/regis.html
+++ b/regis.html
@@ -15,14 +15,20 @@
             <label for="username">Username:</label> 
             <input id="username" name="username" required="" type="text" />
           </div>
+        </div>
+        <div class="userid">
           <div class="sec-2">
             <label for="uid">MOSSS ID:</label>
             <input id="uid" name="uid" required="" type="text" />
           </div>
+        </div>
+        <div class="userid">
           <div class="sec-2">
             <label for="class">Class:</label>
             <input id="class" name="class" required="" type="text" />
           </div>
+        </div>
+        <div class="userid">
           <div class="sec-2">
             <label for="class_no">Class Number:</label>
             <input id="class_no" name="class_no" required="" type="text" />
