--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
       <div class="screen-1">
         <img class="logo" src="imgs\Stella_Logo_Small.png" alt="Stella Logo">
         <div class="userid"><div class="sec-2">
-            <input type="text" name="uid" placeholder="MOSSS Student/Teacher ID"/>
+            <input type="text" name="input" placeholder="MOSSS Student/Teacher ID"/>
         </div></div>
         <div class="password">
           <div class="sec-2">
@@ -25,7 +25,7 @@
     </form>
     <div class="footer">
       <a href="regis.html" style="text-align: left;">Signup</a>
-      <a href="404.html" style="text-align: right;">Forgot Password?</a>
+      <a href="forget_pw.php" style="text-align: right;">Forgot Password?</a>
     </div>
   </div>
 </body>
