sorting files, Stage 1

--- a/694-01.html
+++ b/694-01.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Error 404 - Stellar</title>
+        <title>Error 694-01 - Stellar</title>
         <link rel="stylesheet" href="./header.css">
         <style>
             body {
